core/microkernel/cognumach/build_result.txt
make  all-recursive
make[1]: Entering directory '/home/runner/work/cognu-mach/cognu-mach'
make[2]: Entering directory '/home/runner/work/cognu-mach/cognu-mach'
depbase=`echo vm/memory_object_user.user.o | sed 's|[^/]*$|.deps/&|;s|\.o$||'`;\
gcc -m32 -DHAVE_CONFIG_H -I.  -nostdinc -imacros config.h -I /usr/lib/gcc/x86_64-linux-gnu/13//include -Ii386 -I. -I./i386 -I./i386/include/mach/sa -I./include   -fno-builtin-log -m32 -Wall -Wextra -Wstrict-prototypes -Wold-style-definition -Wmissing-prototypes -Wshadow -Wpointer-arith -Wcast-align -Wwrite-strings -Wredundant-decls -Wnested-externs -Winline -Wno-long-long -Wuninitialized -Wconversion -Wstrict-overflow=2  -fgnu89-inline -fstrict-aliasing -Wstrict-aliasing=2 -ffreestanding -nostdlib -fno-stack-protector -DRDXTREE_KEY_32 -g -O2  -no-pie -fno-PIE -fno-pie -fno-pic -mno-3dnow -mno-mmx -mno-sse -mno-sse2  -g -O2 -ffreestanding -nostdlib -g -O2 -Wall -Wextra -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wformat=2 -Wformat-security -Wold-style-definition -Wno-unused-parameter -Wno-sign-compare -MT vm/memory_object_user.user.o -MD -MP -MF $depbase.Tpo -c -o vm/memory_object_user.user.o vm/memory_object_user.user.c &&\
mv -f $depbase.Tpo $depbase.Po
In file included from ./kern/rbtree.h:58,
                 from ./kern/slab.h:54,
                 from ./machine/task.h:27,
                 from ./kern/task.h:50,
                 from ./kern/thread.h:53,
                 from ./ipc/ipc_thread.h:39,
                 from ./kern/ipc_mig.h:31,
                 from vm/memory_object_user.user.c:14:
./kern/rbtree_i.h: In function ‘rbtree_slot’:
./kern/rbtree_i.h:119:34: warning: conversion to ‘long unsigned int’ from ‘int’ may change the sign of the result [-Wsign-conversion]
  119 |     return (unsigned long)parent | index;
      |                                  ^
In file included from ./machine/gdt.h:36,
                 from ./machine/thread.h:43,
                 from ./kern/thread.h:54:
./machine/seg.h: In function ‘fill_descriptor’:
./machine/seg.h:204:28: warning: conversion from ‘vm_offset_t’ {aka ‘unsigned int’} to ‘unsigned char:4’ may change value [-Wconversion]
  204 |         desc->limit_high = limit >> 16;
      |                            ^~~~~
./machine/seg.h:205:29: warning: conversion from ‘unsigned char’ to ‘unsigned char:4’ may change value [-Wconversion]
  205 |         desc->granularity = sizebits;
      |                             ^~~~~~~~
./machine/seg.h:206:27: warning: conversion from ‘vm_offset_t’ {aka ‘unsigned int’} to ‘unsigned char’ may change value [-Wconversion]
  206 |         desc->base_high = base >> 24;
      |                           ^~~~
./machine/seg.h: In function ‘fill_gate’:
./machine/seg.h:273:29: warning: conversion from ‘long unsigned int’ to ‘short unsigned int’ may change value [-Wconversion]
  273 |         gate->offset_high = (offset >> 16) & WORD_MASK;
      |                             ^
vm/memory_object_user.user.c: In function ‘memory_object_init’:
vm/memory_object_user.user.c:82:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
   82 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:93:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
   93 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:126:9: error: static assertion failed: "Request expected to be 80 bytes"
  126 |         _Static_assert(sizeof(Request) == 80, "Request expected to be 80 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_terminate’:
vm/memory_object_user.user.c:164:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  164 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:175:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  175 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:193:9: error: static assertion failed: "Request expected to be 64 bytes"
  193 |         _Static_assert(sizeof(Request) == 64, "Request expected to be 64 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_copy’:
vm/memory_object_user.user.c:239:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  239 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:272:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  272 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:298:9: error: static assertion failed: "Request expected to be 96 bytes"
  298 |         _Static_assert(sizeof(Request) == 96, "Request expected to be 96 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_data_request’:
vm/memory_object_user.user.c:345:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  345 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:404:9: error: static assertion failed: "Request expected to be 96 bytes"
  404 |         _Static_assert(sizeof(Request) == 96, "Request expected to be 96 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_data_unlock’:
vm/memory_object_user.user.c:451:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  451 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:510:9: error: static assertion failed: "Request expected to be 96 bytes"
  510 |         _Static_assert(sizeof(Request) == 96, "Request expected to be 96 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_lock_completed’:
vm/memory_object_user.user.c:554:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  554 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:598:9: error: static assertion failed: "Request expected to be 80 bytes"
  598 |         _Static_assert(sizeof(Request) == 80, "Request expected to be 80 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_supply_completed’:
vm/memory_object_user.user.c:650:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  650 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:724:9: error: static assertion failed: "Request expected to be 112 bytes"
  724 |         _Static_assert(sizeof(Request) == 112, "Request expected to be 112 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_data_return’:
vm/memory_object_user.user.c:775:9: error: static assertion failed: "expected ipc_port_t to be size 8 * 1"
  775 |         _Static_assert(sizeof(ipc_port_t) == 8 * 1, "expected ipc_port_t to be size 8 * 1");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c:852:9: error: static assertion failed: "Request expected to be 112 bytes"
  852 |         _Static_assert(sizeof(Request) == 112, "Request expected to be 112 bytes");
      |         ^~~~~~~~~~~~~~
vm/memory_object_user.user.c: In function ‘memory_object_change_completed’:
vm/memory_object_user.user.c:922:9: error: static assertion failed: "Request expected to be 64 bytes"
  922 |         _Static_assert(sizeof(Request) == 64, "Request expected to be 64 bytes");
      |         ^~~~~~~~~~~~~~
make[2]: *** [Makefile:5598: vm/memory_object_user.user.o] Error 1
make[2]: Leaving directory '/home/runner/work/cognu-mach/cognu-mach'
make[1]: *** [Makefile:8202: all-recursive] Error 1
make[1]: Leaving directory '/home/runner/work/cognu-mach/cognu-mach'
make: *** [Makefile:3919: all] Error 2
